tasksel (1.20) unstable; urgency=low

UNRELEASED
  * Added Essential: fields to all task files.
  * Changed python task to use python instead of non-existant python-base.
    This task still needs a lot of work.
  * Updated Danish translation da.po by Claus Hindsgaul <claus_h@image.dk>

 -- Joey Hess <joeyh@debian.org>  Mon, 18 Mar 2002 01:36:16 -0500

tasksel (1.19) unstable; urgency=low

  * (NOT YET UPLOADED)
  * (re-)added french translations. Closes: #136758
  * Renamed Norwegian translations; added nn.po 
    Closes: #134075

 -- Randolph Chung <tausq@debian.org>  Mon,  4 Mar 2002 08:54:30 -0800

tasksel (1.18) unstable; urgency=medium

  * Should fix issues with doincludes.pl failing on autobuilders that
    either have no available file, or don't have kde in the availabe file
    (woody systems).

 -- Joey Hess <joeyh@debian.org>  Tue, 26 Feb 2002 19:46:02 -0500

tasksel (1.17) unstable; urgency=medium

  * Removed junkbuster from dialup; probably not going to ship with woody, if
    it manages to somehow it is really in too bad shape to expose newbies to
    it. Closes: #131295
  * (Slipstream release foiled by the NI system. :-)

 -- Joey Hess <joeyh@debian.org>  Tue, 26 Feb 2002 13:30:42 -0500

tasksel (1.16) unstable; urgency=medium

  * Added doincludes.pl, and let the desktop task use it to explode the
    kde metapackage, so its entire dep list is put in the task, and if it does
    not ship with woody, we still will get kde. Closes: #135797
  * The same include mechanism should probably be used for the other
    metapackages, like the junior stuff (and X?). But not right now.

 -- Joey Hess <joeyh@debian.org>  Tue, 26 Feb 2002 11:17:36 -0500

tasksel (1.15) unstable; urgency=low

  * Include sawfish-gnome in desktop task so gnome will have a WM.
    Closes: #116609, #129999
  * Make the basic-desktop task incude all of x-window-system (so it gets a
    WM and xterm and so on), while the desktop task uses just