@@ -3,12 +3,12 @@ Section: base
 Priority: optional
 Maintainer: Randolph Chung <tausq@debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>
-Standards-Version: 3.5.6.0
-Build-Depends: debhelper, slang1-dev, gettext
+Standards-Version: 3.5.6.1
+Build-Depends: debhelper (>= 4), slang1-dev, gettext, dpkg-dev (>= 1.9.0)
 
 Package: tasksel
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Tool for selecting tasks for installation on Debian system
  This package provides 'tasksel', a simple interface for users who
  want to pick general tasks for installation on their Debian GNU/Linux
