@@ -28,7 +28,7 @@ Packages:
  mtr
  man-db
  manpages
- emacs20 # nvi is in base   Hmm, would emacs21 be better?
+ emacs21 # nvi is in base
  nethack # may be stretching the point
  bsdgames # fits description perfectly
  # could add a few other console games, esp. multiuser ones
